--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ pandas>=2.0.0
 requests>=2.31.0
 streamlit>=1.32.0
 scipy>=1.12.0
-numpy>=1.22.4 
+numpy>=1.22.4
+beautifulsoup4>=4.12.0
+lxml>=5.1.0 
