--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas>=2.0.0
+streamlit>=1.31.0
+pandas>=2.2.0
 requests>=2.31.0
-streamlit>=1.32.0
-scipy>=1.12.0
-numpy>=1.22.4
-beautifulsoup4>=4.12.0
-lxml>=5.1.0 
+openpyxl>=3.1.2  # Para leer archivos Excel
+python-dotenv>=1.0.0  # Para manejar variables de entorno
+beautifulsoup4>=4.12.0  # Para web scraping
+lxml>=5.1.0  # Parser XML para beautifulsoup4
+numpy>=1.26.0  # Requerido por pandas 
