--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ openpyxl>=3.1.2  # Para leer archivos Excel
 python-dotenv>=1.0.0  # Para manejar variables de entorno
 beautifulsoup4>=4.12.0  # Para web scraping
 lxml>=5.1.0  # Parser XML para beautifulsoup4
-numpy>=1.26.0  # Requerido por pandas 
+numpy>=1.26.0  # Requerido por pandas
+google-auth>=2.28.0  # Para autenticación con Google
+google-auth-oauthlib>=1.2.0  # Para autenticación OAuth
+google-auth-httplib2>=0.2.0  # Para autenticación HTTP
+google-api-python-client>=2.120.0  # Cliente de Google API 
